# mintchoccy

./: .gitignore  README.md
backend/: Makefile  pyproject.toml  requirements.txt
backend/api/: lambda_handler.py  main.py
backend/api/routers/: auth.py  users.py
backend/api/services/: aws_claims.py
backend/api/utils/: auth.py
backend/docker/: Dockerfile.ecs  Dockerfile.lambda  Dockerfile.local
backend/infra/: app.py
backend/infra/infra/: api_stack.py
backend/utils/: auth.py
frontend/: Makefile  bun.lockb  index.html  package.json  vite.config.js
frontend/infra/: package.json
frontend/infra/lib/: frontend-stack.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/Sidebar/: index.tsx
frontend/src/pages/Authentication/: SignIn.tsx
frontend/src/services/: authenticate.ts  userpool.ts
website/infra/: bun.lockb  package-lock.json
website/infra/lib/: website-stack.ts
website/src/: App.tsx
website/src/pages/: Home.tsx
